compiler/error/tests/src/b.waso
fn new() -> Vector2D {
  -> new Vector2D { x <- -10, y <- 15 }
}
